# learnopengl

./: .gitignore  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: Shaders.cpp  Textures.cpp  shader_s.h
src/0_windows/: CMakeLists.txt
src/1_triangles/: CMakeLists.txt  Triangles.cpp
src/2_shaders/: CMakeLists.txt  Shaders.cpp
src/3_textures/: CMakeLists.txt  Textures.cpp
src/4_transformations/: CMakeLists.txt  Transformations.cpp
src/5_coordinates/: CMakeLists.txt  Coordinates.cpp
src/6_camera/: CMakeLists.txt  Camera.cpp
src/shaders/: vertex.vs
